SERVER-30636 Detect range deletion write concern timeout correctly